--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/EduardPinter/demoQACypress#readme",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/lodash": "^4.14.202",
     "cypress": "^13.5.1",
     "cypress-file-upload": "^5.0.8"
